<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/ic_delete"
        android:orderInCategory="2"
        android:title="@string/action_delete"
        android:contentDescription="@string/action_delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_edit"
        android:icon="@drawable/ic_edit"
        android:orderInCategory="1"
        android:title="@string/action_edit"
        android:contentDescription="@string/action_edit"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="3"
        android:title="@string/action_share"
        android:contentDescription="@string/action_share"
        app:showAsAction="ifRoom" />
</menu>
