<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.shalu.mykitchendiaries.ui.ViewRecipeActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/image_height"
        android:background="@color/coloPrimaryLight"
        android:elevation="4dp"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:expandedTitleMarginStart="72dp"
            app:expandedTitleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true">
            <ImageView
                android:layout_width="match_parent"
                android:transitionName="@string/transition_image"
                app:layout_collapseMode="parallax"
                android:layout_height="@dimen/image_height"
                android:id="@+id/image"
                android:layout_gravity="center_horizontal"
                android:scaleType="fitXY"
                />
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_height"
                android:background="@drawable/scrim_gradient"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                app:popupTheme="@style/AppTheme.PopupOverlay"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                app:navigationIcon="@drawable/ic_action_up"
                app:layout_collapseMode="pin">


            </android.support.v7.widget.Toolbar>
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true"
    android:padding="@dimen/padding_or_margin_8"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.shalu.mykitchendiaries.ui.ViewRecipeActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        >

        <TextView
            android:id="@+id/tv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_or_margin_16"
            android:padding="@dimen/padding_or_margin_8"
            android:text="@string/ingredient_label"
            android:textStyle="bold"
            android:background="@color/colorIngredient"
            android:textColor="@color/icons"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
        <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_ingredients"
            app:layout_constraintTop_toBottomOf="@+id/tv_ingredients"
            >


        </com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView>


        <TextView
            android:id="@+id/tv_steps"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_or_margin_16"
            android:padding="@dimen/padding_or_margin_8"
            android:text="@string/steps_label"
            android:textStyle="bold"
            android:background="@color/colorStep"
            android:textColor="@color/icons"
            app:layout_constraintTop_toBottomOf="@+id/lv_ingredients"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="318dp" />
        <com.github.paolorotolo.expandableheightlistview.ExpandableHeightListView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/lv_steps"
            app:layout_constraintTop_toBottomOf="@+id/tv_steps"
            />


    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>
</android.support.design.widget.CoordinatorLayout>


